# min_vers

./: CHANGELOG.md  README.md  noxfile.py  pyproject.toml
.github/workflows/: checks.yml  lint.yml  publish.yml  py-test.yml  resync-piped.yml
dev-requirements/: constraints.in  constraints.txt  flake8.txt  nox.txt  publish.in  publish.txt  reformat.txt  tests.in  tests.txt  type-checking.txt
min_vers/: __init__.py
tests/: __init__.py  test_min_vers.py
