[build-system]
requires = ["flit_core >=3.3,<4,!=3.7"]
build-backend = "flit_core.buildapi"

[project]
name = "min_vers"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.9.0,<3.13"
license = {file = "LICENSE"}
authors = [ {name = "Faster Speeding", email="lucina@lmbyrne.dev"} ]
keywords = ["DI", "injection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Utilities",
    "Typing :: Typed"
]
dependencies = [
    "pkginfo~=1.8.3",
    "pyproject-parser~=0.7.0",
    "requirements-parser~=0.5.0",
]
dynamic = ["description"]

[project.urls]
Homepage = "https://github.com/FasterSpeeding/min_vers"
Repository = "https://github.com/FasterSpeeding/min_vers"
Documentation = "https://github.com/FasterSpeeding/min_vers"
Changelog = "https://github.com/FasterSpeeding/min_vers/blob/master/CHANGELOG.md"

[tool.black]
line-length     = 120
target-version  = ["py39"]
include         = ".*pyi?$"

[tool.coverage.run]
concurrency = ["multiprocessing"]
parallel = true
branch = true
timid = false
source = ["min_vers"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "^\\s*\\.\\.\\.$",
    "^\\s*@abc.abstractmethod$",
    "^if typing.TYPE_CHECKING:$"
]

[tool.flake8]
accept-encodings = "utf-8"
count = true
docstring-convention = "numpy"
eradicate-aggressive = true
extend-select = ["TC100", "TC101"]
force-future-annotations = true
ignore-decorators = "overload"
max-complexity = 20
max-function-length = 100
# Technically this is 120, but black has a policy of "1 or 2 over is fine if it is tidier", so we have to raise this.
max-line-length = 130
min_python_version = "3.9"
pep585-activation = "always"
show_source = false
statistics = false
ignore = [
    "A003",   # class attribute is shadowing a builtin
    "CFQ004", # Function has too many returns.
    "CFQ002", # Function has too many arguments.
    "D102",   # Missing docstring in public method.
    "D105",   # Magic methods not having a docstring.
    "D412",   # No blank lines allowed between a section header and its content
    "E402",   # Module level import not at top of file (isn't compatible with our import style).
    "IFS001", # "use a oneliner here".
    "T101",   # TO-DO comment detection (T102 is FIX-ME and T103 is XXX).
    "W503",   # line break before binary operator.
    "W504",   # line break before binary operator (again, I guess).
    "S101",   # Use of assert detected. The enclosed code will be removed when compiling to optimised byte code.
    "E203",   # whitespace before ':'
    "E231",   # missing whitespace after ','
]
# Doc errors don't matter in the tests
per-file-ignores = [
    "noxfile.py: D100, FA101, F401, F403, INP001",
    "tests/*.py: D100, D103, D104, FA101",
]

[tool.isort]
profile = "black"
force_single_line = true

[tool.mypy]
# some good strict settings
strict = true
warn_unreachable = true

# more narrow type ignores
show_error_codes = true

# these are used by pyright
warn_unused_ignores = false
warn_redundant_casts = false

# compatibility with pyright
allow_redefinition = true

[tool.piped]
default_sessions = [
    "reformat",
    "verify-markup",
    "flake8",
    "spell-check",
    "slot-check",
    "type-check",
    "test",
]
hide = ["generate-docs", "verify-types"]
extra_test_installs = ["."]
project_name = "min_vers"
top_level_targets = ["./min_vers", "./noxfile.py", "./tests"]

[tool.piped.github_actions.freeze_for_pr]
[tool.piped.github_actions.lint]
[tool.piped.github_actions.publish]
[tool.piped.github_actions.py_test]
codeclimate_token = "6afbda1b66ce6caab04965d92bee9ab4b02afef58568c6402455b25032b8b865"
oses = "[ubuntu-latest]"
python_versions = ["3.9", "3.10", "3.11", "3.12-dev"]

[tool.piped.github_actions.reformat]
[tool.piped.github_actions.resync_piped]
[tool.piped.github_actions.type_check]
[tool.piped.github_actions.update_licence]
[tool.piped.github_actions.upgrade_locks]
[tool.piped.github_actions.verify_locks]

[tool.pyright]
include = ["min_vers", "noxfile.py", "tests"]

pythonVersion = "3.9"
typeCheckingMode = "strict"
reportMissingModuleSource = "error"
reportMissingTypeStubs = "error"

reportUnknownMemberType = "warning"             # This messes with instance checking generic objects
reportUnknownArgumentType = "warning"           # Pretty much the same as reportUnknownMemberType
reportImportCycles = "warning"                  # This isn't necessarily an issue if it's type checking only.
reportUnknownVariableType = "warning"           # Lotta false-positives, might fix/change later.
reportPrivateUsage = "none"                     # Leads to funky false-positives around private module imports.

[tool.pytest.ini_options]
testpaths = ["tests"]
required_plugins = []

[tool.slotscheck]
strict-imports = true
require-superclass = true
require-subclass = true
